@@ -1,0 +1,5 @@
+CHECK_LIBRARY_EXISTS (socket bind "" HAVE_LIBSOCKET)
+
+IF (HAVE_LIBSOCKET)
+  USE_LIBRARY (socket)
+ENDIF (HAVE_LIBSOCKET)
