@@ -96,6 +96,13 @@ CONFIG_DEFINE (HAVE_NANOSLEEP)
 # sqUnixCharConv.c
 
 CHECK_INCLUDE_FILE (iconv.h HAVE_ICONV_H)
+
+CHECK_LIBRARY_EXISTS (iconv libiconv_open "" HAVE_LIBICONV)
+
+IF (HAVE_LIBICONV)
+  USE_LIBRARY(iconv)
+ENDIF (HAVE_LIBICONV)
+
 CHECK_INCLUDE_FILE (langinfo.h HAVE_LANGINFO_H)
 
 IF (HAVE_LANGINFO_H)
